# darwin3d

./: CCD3D.cpp  CMakeLists.txt  quat2eul.cpp
.github/workflows/: codeql.yml  devskim.yml
2D Collision/code/FATE/: ENGINE.h  FATE.CLW  FATE.CPP  FATE.cpp  FATE.h  Fate.dsp  Fate.mak  Fate.plg  Fate.rc  Mainfrm.cpp  Mainfrm.h  MathDefs.h  RESOURCE.h  Readme.txt  STDAFX.CPP  STDAFX.cpp
2D Collision/code/FATE/RES/: FATE.rc2
2D Water Effects/Code/OGL/Agua/: Agua.cpp  Agua.h  AguaDlg.cpp  AguaDlg.h  CMakeLists.txt  LoadTGA.cpp  ReadMe.txt  Resource.h  StdAfx.cpp
3D Morphing/Code/OGL/Morphy/: Bitmap.cpp  Bitmap.h  CMakeLists.txt  LoadDlg.cpp  LoadOBJ.cpp  LoadOBJ.h  MainFrm.cpp  MainFrm.h  MathDefs.h  Morphy.cpp  Morphy.dep  Morphy.dsp  Morphy.dsw  Morphy.h  Morphy.mak  Morphy.rc  OGLView.cpp  OGLView.h  ReadMe.txt  Skeleton.cpp  Skeleton.h  Slider.cpp  Slider.h  StdAfx.cpp  hero2.mtl  loaddlg.h  resource.h  robot2.mtl
Blob Modeling/Code/OGL/Blobby/: Blobby.cpp  Blobby.dsp  Blobby.dsw  Blobby.h  Blobby.rc  CMakeLists.txt  EditBlob.cpp  EditBlob.h  EditSys.cpp  EditSys.h  MainFrm.cpp  MainFrm.h  MathDefs.cpp  MathDefs.h  MetaGoop.cpp  MetaGoop.h  OGLView.cpp  OGLView.h  ReadMe.txt  StdAfx.cpp  resource.h
Cartoon Rendering/Code/OGL/Loony/: CMakeLists.txt  Donut.mtl  LoadOBJ.cpp  LoadOBJ.h  Loony.cpp  Loony.dsp  Loony.dsw  Loony.h  Loony.rc  MainFrm.cpp  MainFrm.h  MathDefs.cpp  MathDefs.h  OGLView.cpp  OGLView.h  Skeleton.cpp  Skeleton.h  ToonSet.cpp  ToonSet.h  chess.mtl  default.shd  gradient.shd  head.mtl  oneshad.shd  readme.txt  resource.h  sphere.mtl  spherehi.mtl  (+1 more)
(+323 files in other folders)
